--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,7 @@ pillow
 opencv3
 
 # Add NeuralSceneGraph to the path
-
+# look at the URL
+# https://docs.nerf.studio/en/latest/quickstart/installation.html
+# tensorboard==2.12.0 for tensorflow
+# tensorboard==2.13.0 for nerfstu
